--- a/package.json
+++ b/package.json
@@ -9,17 +9,26 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@editorjs/editorjs": "^2.31.1",
+    "@editorjs/header": "^2.8.8",
+    "@editorjs/image": "^2.10.3",
+    "@editorjs/list": "^2.0.9",
+    "@editorjs/paragraph": "^2.11.7",
+    "@editorjs/quote": "^2.7.6",
     "@gsap/react": "^2.1.2",
+    "@vercel/blob": "^2.1.0",
     "framer-motion": "^12.26.2",
     "gsap": "^3.14.2",
     "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
+    "mongoose": "^9.1.6",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
