--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "@gsap/react": "^2.1.2",
     "@vercel/blob": "^2.1.0",
     "framer-motion": "^12.26.2",
+    "google-auth-library": "^10.5.0",
+    "google-spreadsheet": "^5.0.2",
     "gsap": "^3.14.2",
     "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
     "mongoose": "^9.1.6",
     "next": "16.1.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
